# pacServer

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  config.h  configure.ac
conf/: Makefile  Makefile.am  pac.txt
src/: Makefile  Makefile.am  pacserver.c  socklib.c  socklib.h
